2008-08-06  Jonathan Gonzalez V.  <zeus@gnu.org>

	* postgres-functions.c (nullify_sale): Modified to accept only one
	argument, the sale id.

	* ventas.c (nullify_sale_datail): Deleted function.

2008-07-29  Jonathan Gonzalez V.  <zeus@lunareja.lunareja>

	* rizoma_informes.c (fill_caja_data): Replaced the use of a big
	query for a plpsql function.

2008-07-29  Jonathan Gonzalez V.  <zeus@gnu.org>

	* administracion_productos.c (ModificarMargenVenta): Fixed to fit
	with the use of GtkBuilder.
	(Recepcion, RecivirWindow, Devolucion, DevolucionWindow): Deleted functions.
	Deleted unnecessary vars.

2008-07-28  Jonathan Gonzalez V.  <zeus@lunareja.lunareja>

	* caja.h: Deleted GtkWidget *caja_button.

	* caja.c (ArqueoCajaLastDay): Deleted function.

	* ventas.c (FillProductSell): Replaced g_ascii_strtod() for
	g_strtod() and PUT macro.
	(SearchProductByCode): Added a gdouble stock var to eval if the
	product really has stock. This avoid any problem of products with
	stock between 0 and 1.

2008-07-27  Jonathan Gonzalez V.  <zeus@gnu.org>

	* rizoma_informes.c (fill_products_rank): Avoided the problem that
	was showing a nan% when there wasn't a margin.

	* postgres-functions.c (ReturnProductsRank): Replaced the long
	query for the use of ranking_ventas() plpsql function.

2008-07-25  Jonathan Gonzalez V.  <zeus@lunareja.lunareja>

	* manejo_productos.c (CompraCreateNew): If the product doesn't
	exist we return NULL.
	(CompraAgregarALista): If we couldn't get the info of a product we
	return FALSE.

	* compras.c (AddToProductsList): Deleted code that was launching
	AskForCurrentPrice() function. If the barcode it's empty we just
	return without doing nothing.
	(AskForCurrentPrice, AcceptCurrentPrice)
	(CloseAskForCurrentPrice): Deleted functions.
	(AddToProductsList): Added check to know if the product was added
	to the list.

	* postgres-functions.c (GetDayToSell): Deleted function.
	(GetVencDate, GetElabDate, PagarFactura): Deleted commented code.
